--- a/nbs/20_examples.dialogpt.ipynb
+++ b/nbs/20_examples.dialogpt.ipynb
@@ -1000,84 +1000,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">> User: Hi Homer. What's up?\n",
-      "DialoGPT: Uh, uh... nothing.\n",
-      ">> User: Are you hiding something. This sounds suspecious\n",
-      "DialoGPT: Uh, uh, you want me to give you some of those pills?\n",
-      ">> User: Did you take some pills? Which pills?\n",
-      "DialoGPT: Uh, I got the whole package.\n",
-      ">> User: I think you need to go to hospital!\n",
-      "DialoGPT: I've been a little sick lately.\n",
-      ">> User: Ok, let's call ambulance!\n",
-      "DialoGPT: Okay, but I'm a little worried about you. Do you know you're sick?\n"
-     ]
-    }
-   ],
-   "source": [
-    "#hide\n",
-    "model = learn.model\n",
-    "model.cpu()\n",
-    "for step in range(5):\n",
-    "    new_user_input_ids = tokenizer.encode(input(\">> User: \") + tokenizer.eos_token, return_tensors='pt')\n",
-    "\n",
-    "    bot_input_ids = torch.cat([chat_history_ids, new_user_input_ids], dim=-1) if step > 0 else new_user_input_ids\n",
-    "\n",
-    "    chat_history_ids = model.generate(bot_input_ids, \n",
-    "                                      max_length=1000, \n",
-    "                                      pad_token_id=tokenizer.eos_token_id,\n",
-    "                                      do_sample=True,\n",
-    "                                      top_p=0.9)\n",
-    "\n",
-    "    print(\"DialoGPT: {}\".format(tokenizer.decode(chat_history_ids[:, bot_input_ids.shape[-1]:][0], skip_special_tokens=True)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">> User:Hey Homer! How are you doing?\n",
-      "DialoGPT: I'm fine. Just thinking...\n",
-      ">> User:What are you thinking?\n",
-      "DialoGPT: Hey, hey, you're that guy who has to watch your kids!\n",
-      ">> User:No, I don't have any kids\n",
-      "DialoGPT: And now that you know about kids, I need you to keep to yourself.\n",
-      ">> User:I don't get what you mean...\n",
-      "DialoGPT: Don't tell your husband that. He might think you're stealing food from school.\n",
-      ">> User:ok. this is getting wierd. Good bye\n",
-      "DialoGPT: Bye, Homer.\n"
-     ]
-    }
-   ],
-   "source": [
-    "#hide\n",
-    "for step in range(5):\n",
-    "    new_user_input_ids = tokenizer.encode(input(\">> User: \") + tokenizer.eos_token, return_tensors='pt')\n",
-    "\n",
-    "    bot_input_ids = torch.cat([chat_history_ids, new_user_input_ids], dim=-1) if step > 0 else new_user_input_ids\n",
-    "\n",
-    "    chat_history_ids = model.generate(bot_input_ids, \n",
-    "                                      max_length=1000, \n",
-    "                                      pad_token_id=tokenizer.eos_token_id,\n",
-    "                                      do_sample=True,\n",
-    "                                      top_p=0.9)\n",
-    "\n",
-    "    print(\"DialoGPT: {}\".format(tokenizer.decode(chat_history_ids[:, bot_input_ids.shape[-1]:][0], skip_special_tokens=True)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
        "model_id": "733fc47ae62a4700b602bff15b6634e8",
@@ -1163,8 +1085,86 @@
     }
    ],
    "source": [
+    "#hide\n",
     "model = AutoModelForCausalLM.from_pretrained(path)\n",
     "tokenizer = AutoTokenizer.from_pretrained(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">> User: Hi Homer. What's up?\n",
+      "DialoGPT: Uh, uh... nothing.\n",
+      ">> User: Are you hiding something. This sounds suspecious\n",
+      "DialoGPT: Uh, uh, you want me to give you some of those pills?\n",
+      ">> User: Did you take some pills? Which pills?\n",
+      "DialoGPT: Uh, I got the whole package.\n",
+      ">> User: I think you need to go to hospital!\n",
+      "DialoGPT: I've been a little sick lately.\n",
+      ">> User: Ok, let's call ambulance!\n",
+      "DialoGPT: Okay, but I'm a little worried about you. Do you know you're sick?\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = learn.model\n",
+    "model.cpu()\n",
+    "for step in range(5):\n",
+    "    new_user_input_ids = tokenizer.encode(input(\">> User: \") + tokenizer.eos_token, return_tensors='pt')\n",
+    "\n",
+    "    bot_input_ids = torch.cat([chat_history_ids, new_user_input_ids], dim=-1) if step > 0 else new_user_input_ids\n",
+    "\n",
+    "    chat_history_ids = model.generate(bot_input_ids, \n",
+    "                                      max_length=1000, \n",
+    "                                      pad_token_id=tokenizer.eos_token_id,\n",
+    "                                      do_sample=True,\n",
+    "                                      top_p=0.9)\n",
+    "\n",
+    "    print(\"DialoGPT: {}\".format(tokenizer.decode(chat_history_ids[:, bot_input_ids.shape[-1]:][0], skip_special_tokens=True)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">> User:Hey Homer! How are you doing?\n",
+      "DialoGPT: I'm fine. Just thinking...\n",
+      ">> User:What are you thinking?\n",
+      "DialoGPT: Hey, hey, you're that guy who has to watch your kids!\n",
+      ">> User:No, I don't have any kids\n",
+      "DialoGPT: And now that you know about kids, I need you to keep to yourself.\n",
+      ">> User:I don't get what you mean...\n",
+      "DialoGPT: Don't tell your husband that. He might think you're stealing food from school.\n",
+      ">> User:ok. this is getting wierd. Good bye\n",
+      "DialoGPT: Bye, Homer.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#hide\n",
+    "for step in range(5):\n",
+    "    new_user_input_ids = tokenizer.encode(input(\">> User: \") + tokenizer.eos_token, return_tensors='pt')\n",
+    "\n",
+    "    bot_input_ids = torch.cat([chat_history_ids, new_user_input_ids], dim=-1) if step > 0 else new_user_input_ids\n",
+    "\n",
+    "    chat_history_ids = model.generate(bot_input_ids, \n",
+    "                                      max_length=1000, \n",
+    "                                      pad_token_id=tokenizer.eos_token_id,\n",
+    "                                      do_sample=True,\n",
+    "                                      top_p=0.9)\n",
+    "\n",
+    "    print(\"DialoGPT: {}\".format(tokenizer.decode(chat_history_ids[:, bot_input_ids.shape[-1]:][0], skip_special_tokens=True)))"
    ]
   },
   {
@@ -1215,9 +1215,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.8 64-bit ('torchenv': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python388jvsc74a57bd04af15c6377fd3f0f03723b0d6472f0c10dcd7b2afd49a75a2b51cefc0e0a1d19"
   }
  },
  "nbformat": 4,
