--- a/nbs/11_examples.mlm-imdb.ipynb
+++ b/nbs/11_examples.mlm-imdb.ipynb
@@ -66,7 +66,7 @@
     "import sys\n",
     "if 'google.colab' in sys.modules:\n",
     "    !pip install -Uqq fastai transformers datasets wandb\n",
-    "    !pip install git+git://github.com/aikindergarten/fasthugs.git"
+    "    !pip install -qq git+git://github.com/aikindergarten/fasthugs.git"
    ]
   },
   {
@@ -85,9 +85,9 @@
     "from transformers import AutoTokenizer, AutoModelForMaskedLM\n",
     "from datasets import load_dataset, concatenate_datasets\n",
     "\n",
-    "from fastai.text.all import *\n",
+    "from fastai.text.all import DataBlock, IndexSplitter, noop, perplexity\n",
     "from fasthugs.learner import TransLearner\n",
-    "from fasthugs.data import *"
+    "from fasthugs.data import TransformersLMBlock"
    ]
   },
   {
@@ -182,15 +182,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dataset['unsupervised'][2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "tokenizer = AutoTokenizer.from_pretrained(model_name)"
    ]
   },
@@ -222,6 +213,7 @@
    ],
    "source": [
     "# dataset = dataset.map(tokenize, batched=True, batch_size=100, remove_columns=dataset['train'].column_names, num_proc=4)\n",
+    "dataset.info.task_templates = []\n",
     "dataset = dataset.map(tokenize, batched=True, batch_size=100, remove_columns=dataset.column_names, num_proc=4)"
    ]
   },
@@ -280,6 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# hide\n",
     "# lm_dataset = concatenate_datasets([lm_dataset['train'], lm_dataset['unsupervised'], lm_dataset['test']])"
    ]
   },
@@ -567,9 +560,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.8 64-bit ('torchenv': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python388jvsc74a57bd04af15c6377fd3f0f03723b0d6472f0c10dcd7b2afd49a75a2b51cefc0e0a1d19"
   }
  },
  "nbformat": 4,
