--- a/nbs/01_learner.ipynb
+++ b/nbs/01_learner.ipynb
@@ -164,6 +164,11 @@
     "    \"Recursively put `b` on `device`. Handles `BatchEncoding`s\"\n",
     "    if defaults.use_cuda==False: device='cpu'\n",
     "    elif device is None: device=default_device()\n",
+    "    # put custom `namedtuple` on `device`    \n",
+    "    if (isinstance(b, tuple) and\n",
+    "        hasattr(b, \"_asdict\") and\n",
+    "        hasattr(b, \"_fields\")):\n",
+    "        return type(b)(**{k:to_device(v) for k,v in b._asdict().items()})\n",
     "    def _inner(o):      \n",
     "        if isinstance(o,Tensor): return o.to(device, non_blocking=True)\n",
     "        elif isinstance(o,BatchEncoding): return o.to(device)\n",
@@ -184,6 +189,22 @@
     "d = {'a':tensor([1,2,3])}\n",
     "d_cuda = to_device(d)\n",
     "assert d_cuda['a'].device == device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c176d8ae-2b6a-4908-8ccb-afaa2974ddd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide\n",
+    "#cuda\n",
+    "ModelInputs = namedtuple(\"ModelInputs\", [\"a\", \"b\", \"c\"], defaults=[None]*3)\n",
+    "b = ModelInputs(a=tensor([1,2,3]))\n",
+    "b = to_device(b)\n",
+    "assert b.a.device == device\n",
+    "assert b.b is None"
    ]
   },
   {
