set TransCallback order=1

--- a/nbs/01_learner.ipynb
+++ b/nbs/01_learner.ipynb
@@ -164,7 +164,8 @@
     "    \"Recursively put `b` on `device`. Handles `BatchEncoding`s\"\n",
     "    if defaults.use_cuda==False: device='cpu'\n",
     "    elif device is None: device=default_device()\n",
-    "    # put custom `namedtuple` on `device`    \n",
+    "    # put custom `namedtuple` on `device`\n",
+    "    # there might be no need in it, mb to remove\n",
     "    if (isinstance(b, tuple) and\n",
     "        hasattr(b, \"_asdict\") and\n",
     "        hasattr(b, \"_fields\")):\n",
@@ -224,6 +225,7 @@
    "source": [
     "#export\n",
     "class TransCallback(Callback):\n",
+    "    order = 1\n",
     "    \"Handles HuggingFace model inputs and outputs\"\n",
     "    def __init__(self, model):\n",
     "        sig = signature(model.forward)\n",
