nested reorder for dict

--- a/nbs/01_learner.ipynb
+++ b/nbs/01_learner.ipynb
@@ -209,6 +209,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df376cd8-9db0-4948-bd7d-9a93949ed9e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#reorder\n",
+    "def nested_reorder(t, idxs):\n",
+    "    \"Reorder all tensors in `t` using `idxs`\"\n",
+    "    if isinstance(t, (Tensor,L)): return t[idxs]\n",
+    "    elif is_listy(t): return type(t)(nested_reorder(t_, idxs) for t_ in t)\n",
+    "    elif isinstance(t, dict): return {k:nested_reorder(v, idxs) for k,v in t.items()}\n",
+    "    if t is None: return t\n",
+    "    raise TypeError(f\"Expected tensor, tuple, list or L but got {type(t)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "262521ee-1f75-438a-8991-2864e3e11bb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {\"a\":tensor([[1,2], [3,4]])}\n",
+    "d = nested_reorder(d, tensor([1,0]))\n",
+    "assert torch.all(d[\"a\"] == tensor([[1,2], [3,4]])[tensor(1,0)])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9928abfe-a504-4b15-bf30-7706ceaf42ed",
    "metadata": {},
