nested_reoder for dict

--- a/nbs/01_learner.ipynb
+++ b/nbs/01_learner.ipynb
@@ -215,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#reorder\n",
+    "#export\n",
     "def nested_reorder(t, idxs):\n",
     "    \"Reorder all tensors in `t` using `idxs`\"\n",
     "    if isinstance(t, (Tensor,L)): return t[idxs]\n",
