--- a/nbs/01_learner.ipynb
+++ b/nbs/01_learner.ipynb
@@ -53,6 +53,7 @@
     "#export\n",
     "from fastai.basics import *\n",
     "from fastai.text.all import TensorText\n",
+    "from fastai.learner import _ConstantFunc\n",
     "from inspect import signature\n",
     "from collections import namedtuple\n",
     "from fasthugs.data import TransformersTextBlock, TransTensorText\n",
